--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<div class="container-fluid">
 				<span class="navbar-text">
 					As at
-					<a href="https://github.com/notofonts/ahom/commit/86cdd89
-"><code>86cdd89
+					<a href="https://github.com/notofonts/ahom/commit/910b461
+"><code>910b461
 </code></a>
 				</span>
 				<div class="mx-auto order-0">
@@ -68,24 +68,24 @@
 				
 				<h4>Noto Serif Ahom</h4>
 				<div class="row align-items-start"><ul>
-<li class="li-0">full<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSerifAhom/full/ttf/NotoSerifAhom-Regular.ttf"> NotoSerifAhom-Regular.ttf</a></li>
- </ul>
- </ul>
 <li class="li-0">googlefonts<ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSerifAhom/googlefonts/ttf/NotoSerifAhom-Regular.ttf"> NotoSerifAhom-Regular.ttf</a></li>
  </ul>
  </ul>
-<li class="li-0">unhinted<ul>
+<li class="li-0">full<ul>
 <li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSerifAhom/unhinted/ttf/NotoSerifAhom-Regular.ttf"> NotoSerifAhom-Regular.ttf</a></li>
+<li><a href="fonts/NotoSerifAhom/full/ttf/NotoSerifAhom-Regular.ttf"> NotoSerifAhom-Regular.ttf</a></li>
  </ul>
  </ul>
 <li class="li-0">hinted<ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSerifAhom/hinted/ttf/NotoSerifAhom-Regular.ttf"> NotoSerifAhom-Regular.ttf</a></li>
+ </ul>
+ </ul>
+<li class="li-0">unhinted<ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSerifAhom/unhinted/ttf/NotoSerifAhom-Regular.ttf"> NotoSerifAhom-Regular.ttf</a></li>
  </ul>
  </ul>
  </ul></div>
@@ -110,6 +110,9 @@
 									</ul>
 
 				<ul>
+										<li>
+						<a href="qa/NotoSerifAhom/Diffenator/Regular/report.html">Diffenator report, Regular</a>
+					</li>
 									</ul>
 				
 				<h3>Proof sheets</h3>
