deploy: c503f4df392791579f42fbcea587030a03fc2701

--- a/proof/text.html
+++ b/proof/text.html
@@ -146,13 +146,11 @@
 </h2>
 	
   
-      <div class="box">
-	<div class="box-title">Noto-Serif-Ahom-Regular 14pt</div>
-	<span class="Noto-Serif-Ahom-Regular" style="font-size: 14pt">
-	  𑜏𑜍𑜈𑜉 𑜃𑜑 𑜊𑜄𑜞 𑜊𑜕𑜄𑜣 𑜏𑜡𑜃𑜫𑜄𑜣𑜃𑜫𑜊𑜡𑜊𑜏𑜫𑜈𑜡𑜄𑜃𑜫𑜄𑜞𑜫𑜊𑜡𑜃𑜪𑜡 𑜒𑜡𑜔𑜡𑜍𑜑𑜫 𑜉𑜡𑜃𑜈𑜆𑜍𑜣𑜈𑜡𑜍𑜏𑜫𑜊 𑜏𑜍𑜫𑜈𑜦𑜧𑜏𑜡𑜉𑜆𑜣 𑜏𑜉𑜤𑜄𑜫𑜆𑜃𑜫𑜃𑜡𑜑𑜫 𑜕𑜧𑜨𑜍𑜈𑜓𑜞𑜥𑜏𑜡 𑜒𑜔𑜣𑜀𑜡𑜍𑜓𑜞𑜥𑜏𑜡 𑜋 𑜈𑜍𑜫𑜄𑜃𑜫𑜄𑜦𑜧𑜼 𑜒𑜘𑜣𑜗𑜦𑜡𑜏𑜃𑜡𑜊𑜪𑜡 𑜒𑜃𑜤𑜊𑜫𑜐𑜡𑜏𑜫𑜊𑜄𑜦𑜧𑜼 𑜆𑜞𑜄𑜣𑜏𑜢𑜓𑜫𑜔𑜑𑜫 𑜏𑜫𑜌𑜡𑜏𑜫𑜊𑜄𑜣𑜼 𑜄𑜤𑜎𑜫𑜊𑜡𑜑𑜫 𑜈𑜣𑜃𑜩𑜈 𑜒𑜥𑜎𑜝𑜪𑜗𑜃𑜦𑜧
-          </span>
-       </div>
-    
+    <div class="box">
+      <div class="box-title">Noto-Serif-Ahom-Regular 14pt</div>
+      <div dir="auto" class="Noto-Serif-Ahom-Regular" style="font-size: 14pt">𑜏𑜍𑜈𑜉 𑜃𑜑 𑜊𑜄𑜞 𑜊𑜕𑜄𑜣 𑜏𑜡𑜃𑜫𑜄𑜣𑜃𑜫𑜊𑜡𑜊𑜏𑜫𑜈𑜡𑜄𑜃𑜫𑜄𑜞𑜫𑜊𑜡𑜃𑜪𑜡 𑜒𑜡𑜔𑜡𑜍𑜑𑜫 𑜉𑜡𑜃𑜈𑜆𑜍𑜣𑜈𑜡𑜍𑜏𑜫𑜊 𑜏𑜍𑜫𑜈𑜦𑜧𑜏𑜡𑜉𑜆𑜣 𑜏𑜉𑜤𑜄𑜫𑜆𑜃𑜫𑜃𑜡𑜑𑜫 𑜕𑜧𑜨𑜍𑜈𑜓𑜞𑜥𑜏𑜡 𑜒𑜔𑜣𑜀𑜡𑜍𑜓𑜞𑜥𑜏𑜡 𑜋 𑜈𑜍𑜫𑜄𑜃𑜫𑜄𑜦𑜧𑜼 𑜒𑜘𑜣𑜗𑜦𑜡𑜏𑜃𑜡𑜊𑜪𑜡 𑜒𑜃𑜤𑜊𑜫𑜐𑜡𑜏𑜫𑜊𑜄𑜦𑜧𑜼 𑜆𑜞𑜄𑜣𑜏𑜢𑜓𑜫𑜔𑜑𑜫 𑜏𑜫𑜌𑜡𑜏𑜫𑜊𑜄𑜣𑜼 𑜄𑜤𑜎𑜫𑜊𑜡𑜑𑜫 𑜈𑜣𑜃𑜩𑜈 𑜒𑜥𑜎𑜝𑜪𑜗𑜃𑜦𑜧</span>
+    </div>
+  
 
     </div>
 </body>
