--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<div class="container-fluid">
 				<span class="navbar-text">
 					As at
-					<a href="https://github.com/notofonts/ahom/commit/350488f
-"><code>350488f
+					<a href="https://github.com/notofonts/ahom/commit/86adc96
+"><code>86adc96
 </code></a>
 				</span>
 				<div class="mx-auto order-0">
@@ -68,6 +68,22 @@
 				
 				<h4>Noto Serif Ahom</h4>
 				<div class="row align-items-start"><ul>
+<li class="li-0">unhinted<ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSerifAhom/unhinted/ttf/NotoSerifAhom-Regular.ttf"> NotoSerifAhom-Regular.ttf</a></li>
+ </ul>
+<li class="li-1">otf<ul>
+<li><a href="fonts/NotoSerifAhom/unhinted/otf/NotoSerifAhom-Regular.otf"> NotoSerifAhom-Regular.otf</a></li>
+ </ul>
+ </ul>
+<li class="li-0">full<ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSerifAhom/full/ttf/NotoSerifAhom-Regular.ttf"> NotoSerifAhom-Regular.ttf</a></li>
+ </ul>
+<li class="li-1">otf<ul>
+<li><a href="fonts/NotoSerifAhom/full/otf/NotoSerifAhom-Regular.otf"> NotoSerifAhom-Regular.otf</a></li>
+ </ul>
+ </ul>
 <li class="li-0">hinted<ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSerifAhom/hinted/ttf/NotoSerifAhom-Regular.ttf"> NotoSerifAhom-Regular.ttf</a></li>
@@ -76,16 +92,6 @@
 <li class="li-0">googlefonts<ul>
 <li class="li-1">ttf<ul>
 <li><a href="fonts/NotoSerifAhom/googlefonts/ttf/NotoSerifAhom-Regular.ttf"> NotoSerifAhom-Regular.ttf</a></li>
- </ul>
- </ul>
-<li class="li-0">full<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSerifAhom/full/ttf/NotoSerifAhom-Regular.ttf"> NotoSerifAhom-Regular.ttf</a></li>
- </ul>
- </ul>
-<li class="li-0">unhinted<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSerifAhom/unhinted/ttf/NotoSerifAhom-Regular.ttf"> NotoSerifAhom-Regular.ttf</a></li>
  </ul>
  </ul>
  </ul></div>
