--- a/qa/NotoSerifAhom/Regular/diffbrowsers/diffbrowsers_text.html
+++ b/qa/NotoSerifAhom/Regular/diffbrowsers/diffbrowsers_text.html
@@ -183,6 +183,14 @@
 
 	  
 	
+
+	   #ot-panel {
+		max-height: 400px;
+		overflow-y: scroll;
+		background: white;
+		padding: 10px;
+		display: none;
+	   }
     </style>
 </head>
 <body>
@@ -190,6 +198,9 @@
 		
 			<div class="nav-item" id="font-toggle">old</div>
 		
+			<div class="nav-item" id="ot-button">OT features</div>
+			<div id="ot-panel">
+			</div>
 		
 	</div>
     <div id="content">
@@ -200,7 +211,7 @@
   
     <div class="box">
       <div class="box-title">old-Regular 20pt</div>
-	<div class="box-text old-Regular" dir="auto" style="font-size: 20pt">𑜏𑜍𑜈𑜉 𑜃𑜑 𑜊𑜄𑜞 𑜊𑜕𑜄𑜣 𑜏𑜡𑜃𑜫𑜄𑜣𑜃𑜫𑜊𑜡𑜊𑜏𑜫𑜈𑜡𑜄𑜃𑜫𑜄𑜞𑜫𑜊𑜡𑜃𑜪𑜡 𑜒𑜡𑜔𑜡𑜍𑜑𑜫 𑜉𑜡𑜃𑜈𑜆𑜍𑜣𑜈𑜡𑜍𑜏𑜫𑜊 𑜏𑜍𑜫𑜈𑜦𑜧𑜏𑜡𑜉𑜆𑜣 𑜏𑜉𑜤𑜄𑜫𑜆𑜃𑜫𑜃𑜡𑜑𑜫 𑜕𑜧𑜨𑜍𑜈𑜓𑜞𑜥𑜏𑜡 𑜒𑜔𑜣𑜀𑜡𑜍𑜓𑜞𑜥𑜏𑜡 𑜋 𑜈𑜍𑜫𑜄𑜃𑜫𑜄𑜦𑜧𑜼 𑜒𑜘𑜣𑜗𑜦𑜡𑜏𑜃𑜡𑜊𑜪𑜡 𑜒𑜃𑜤𑜊𑜫𑜐𑜡𑜏𑜫𑜊𑜄𑜦𑜧𑜼 𑜆𑜞𑜄𑜣𑜏𑜢𑜓𑜫𑜔𑜑𑜫 𑜏𑜫𑜌𑜡𑜏𑜫𑜊𑜄𑜣𑜼 𑜄𑜤𑜎𑜫𑜊𑜡𑜑𑜫 𑜈𑜣𑜃𑜩𑜈 𑜒𑜥𑜎𑜝𑜪𑜗𑜃𑜦𑜧</div>
+	<div contenteditable=true spellcheck="false" class="box-text old-Regular" dir="auto" style="font-size: 20pt">𑜏𑜍𑜈𑜉 𑜃𑜑 𑜊𑜄𑜞 𑜊𑜕𑜄𑜣 𑜏𑜡𑜃𑜫𑜄𑜣𑜃𑜫𑜊𑜡𑜊𑜏𑜫𑜈𑜡𑜄𑜃𑜫𑜄𑜞𑜫𑜊𑜡𑜃𑜪𑜡 𑜒𑜡𑜔𑜡𑜍𑜑𑜫 𑜉𑜡𑜃𑜈𑜆𑜍𑜣𑜈𑜡𑜍𑜏𑜫𑜊 𑜏𑜍𑜫𑜈𑜦𑜧𑜏𑜡𑜉𑜆𑜣 𑜏𑜉𑜤𑜄𑜫𑜆𑜃𑜫𑜃𑜡𑜑𑜫 𑜕𑜧𑜨𑜍𑜈𑜓𑜞𑜥𑜏𑜡 𑜒𑜔𑜣𑜀𑜡𑜍𑜓𑜞𑜥𑜏𑜡 𑜋 𑜈𑜍𑜫𑜄𑜃𑜫𑜄𑜦𑜧𑜼 𑜒𑜘𑜣𑜗𑜦𑜡𑜏𑜃𑜡𑜊𑜪𑜡 𑜒𑜃𑜤𑜊𑜫𑜐𑜡𑜏𑜫𑜊𑜄𑜦𑜧𑜼 𑜆𑜞𑜄𑜣𑜏𑜢𑜓𑜫𑜔𑜑𑜫 𑜏𑜫𑜌𑜡𑜏𑜫𑜊𑜄𑜣𑜼 𑜄𑜤𑜎𑜫𑜊𑜡𑜑𑜫 𑜈𑜣𑜃𑜩𑜈 𑜒𑜥𑜎𑜝𑜪𑜗𑜃𑜦𑜧</div>
     </div>
   
 
@@ -239,6 +250,81 @@
 		fontToggle.addEventListener("click", switchFonts);
 	}
 
+// apply optional ot feats
+
+function buildFeatureList() {
+	var features = [
+		'aalt', 'c2sc', 'calt', 'case', 'cpsp', 'dlig', 'dnom',
+		'fina', 'frac', 'init', 'kern', 'liga', 'lnum', 'numr', 'onum',
+		'ordn', 'pnum', 'salt', 'sinf', 'smcp', 'sups',
+		'swsh', 'titl', 'tnum', 'zero', 'ss01', 'ss02',
+		'ss03', 'ss04', 'ss05', 'ss06', 'ss07', 'ss08',
+		'ss09', 'ss10', 'ss11', 'ss12', 'ss13', 'ss14',
+		'ss15', 'ss16', 'ss17', 'ss18', 'ss19', 'ss20'
+	]
+	
+	var otPanel = document.getElementById("ot-panel")
+	for (i=0; i<features.length; i++) {
+		var feat = features[i]
+		
+		var row = document.createElement("div");
+
+		var item = document.createElement("input");
+		item.type = "checkbox"
+		item.value = feat
+		item.classList.add("ot-checkbox")
+		var label = document.createElement("label")
+		label.textContent = feat
+
+		row.appendChild(item)
+		row.appendChild(label)
+
+		otPanel.appendChild(row)
+	}
+}
+
+buildFeatureList()
+
+
+function enableFeatures() {
+	var checkboxes = document.getElementsByClassName("ot-checkbox")
+	var res = []
+	var disableKerning = false
+	for (i=0; i<checkboxes.length; i++) {
+		if (checkboxes[i].checked === true) {
+			var checkbox = checkboxes[i]
+			res.push('"' + checkbox.value + '"')
+
+			if (checkbox.value === "kern") {
+				disableKerning = true
+			}
+		}
+	}	
+
+	var boxText = document.getElementsByClassName("box-text")
+	var otString = res.join(", ")
+	for (j=0; j<boxText.length; j++) {
+		boxText[j].style.fontFeatureSettings = otString
+		if (disableKerning === true) {
+			boxText[j].style.fontKerning = "none"
+		}
+	}
+}
+
+var otButton = document.getElementById("ot-button")
+otButton.addEventListener("click", function() {
+    otPanel = document.getElementById("ot-panel")
+    if (otPanel.style.display !== "block") {
+        otPanel.style.display = "block"
+    } else {
+        otPanel.style.display = "none"
+    }
+})
+var checkboxes = document.getElementsByClassName("ot-checkbox")
+for (i=0; i<checkboxes.length; i++) {
+	cb = checkboxes[i]
+	cb.addEventListener("click", enableFeatures)
+}	
     
 	// break text so that no reflow happens
 async function breakText() {
