--- a/fontbakery/googlefonts-NotoSerifAhom-report.html
+++ b/fontbakery/googlefonts-NotoSerifAhom-report.html
@@ -127,20 +127,20 @@ ul {
                 <th>✅ PASS</th>
             </tr>
             <tr>
-                <td>4</td>
-                <td>4</td>
-                <td>8</td>
+                <td>0</td>
+                <td>2</td>
+                <td>9</td>
                 <td>118</td>
-                <td>6</td>
-                <td>110</td>
+                <td>7</td>
+                <td>113</td>
             </tr>
             <tr>
-                <td>2%</td>
-                <td>2%</td>
-                <td>4%</td>
+                <td>0%</td>
+                <td>1%</td>
+                <td>5%</td>
                 <td>64%</td>
-                <td>3%</td>
-                <td>60%</td>
+                <td>4%</td>
+                <td>62%</td>
             </tr>
             </table>
             
@@ -163,25 +163,33 @@ ul {
     <p>(but other kinds of bug reports and/or feature requests
        are also always welcome, of course!)</p>
 
-    <p>FontBakery version: 0.9.1</p>
+    <p>FontBakery version: 0.9.2</p>
     
 <h2>Section: Google Fonts</h2>
-<span class='section__emoji'>💥💥🔥🔥⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️</span>
-<h3>Checking OS/2 achVendID.</h3>
-<div class='check__idlabel'>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/vendor_id&gt;</div>
+<span class='section__emoji'>🔥⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️</span>
+<h3>Check for codepoints not covered by METADATA subsets.</h3>
+<div class='check__idlabel'>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/metadata/unreachable_subsetting&gt;</div>
 
-<details><summary>💥 NotoSerifAhom-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>💥 ERROR</span><span class='details_text'><p>The condition <a href="FontBakeryCondition:registered_vendor_ids">FontBakeryCondition:registered_vendor_ids</a> had an error: ModuleNotFoundError: No module named 'bs4'</p>
-</span></li></ul></div></details>
-<h3>Show hinting filesize impact.</h3>
-<div class='check__idlabel'>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/hinting_impact&gt;</div>
-
-<details><summary>💥 NotoSerifAhom-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>💥 ERROR</span><span class='details_text'><p>The condition <a href="FontBakeryCondition:hinting_stats">FontBakeryCondition:hinting_stats</a> had an error: ModuleNotFoundError: No module named 'dehinter'</p>
-</span></li></ul></div></details>
-<h3>Version number has increased since previous release on Google Fonts?</h3>
-<div class='check__idlabel'>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/version_bump&gt;</div>
-
-<details><summary>🔥 NotoSerifAhom-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>Version number 2.0059967041015625 is equal to version on Google Fonts.</p>
-</span></li><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>Version number 2.0059967041015625 is equal to version on Google Fonts GitHub repo.</p>
+<details><summary>⚠️ NotoSerifAhom-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following codepoints supported by the font are not covered by
+any subsets defined in the font's metadata file, and will never
+be served. You can solve this by either manually adding additional
+subset declarations to METADATA.pb, or by editing the glyphset
+definitions.</p>
+<ul>
+<li>U+02C7 CARON: try adding one of: tifinagh, canadian-aboriginal, yi</li>
+<li>U+02C9 MODIFIER LETTER MACRON: not included in any glyphset definition</li>
+<li>U+02D8 BREVE: try adding one of: canadian-aboriginal, yi</li>
+<li>U+02D9 DOT ABOVE: try adding one of: canadian-aboriginal, yi</li>
+<li>U+02DB OGONEK: try adding one of: canadian-aboriginal, yi</li>
+<li>U+02DD DOUBLE ACUTE ACCENT: not included in any glyphset definition</li>
+<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: tifinagh, math, cherokee, coptic</li>
+<li>U+0306 COMBINING BREVE: try adding one of: tifinagh, old-permic</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: tai-le, old-permic, syriac, math, malayalam, tifinagh, canadian-aboriginal, coptic</li>
+<li>U+030A COMBINING RING ABOVE: try adding syriac
+13 more.</li>
+</ul>
+<p>Use -F or --full-lists to disable shortening of long lists.</p>
+<p>Or you can add the above codepoints to one of the subsets supported by the font: <code>ahom</code>, <code>latin</code>, <code>latin-ext</code> [code: unreachable-subsetting]</p>
 </span></li></ul></div></details>
 <h3>Ensure fonts have ScriptLangTags declared on the 'meta' table.</h3>
 <div class='check__idlabel'>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/meta/script_lang_tags&gt;</div>
@@ -194,12 +202,7 @@ ul {
 <details><summary>🔥 NotoSerifAhom-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>This is a Noto font but it lacks an ARTICLE.en_us.html file [code: missing-article]</p>
 </span></li></ul></div></details>
 <h2>Section: Universal</h2>
-<span class='section__emoji'>🔥⚠️⚠️⚠️⚠️⏩⏩⏩⏩⏩⏩ℹ️ℹ️</span>
-<h3>Check if uppercase glyphs are vertically centered.</h3>
-<div class='check__idlabel'>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/caps_vertically_centered&gt;</div>
-
-<details><summary>⚠️ NotoSerifAhom-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>Uppercase glyphs are not vertically centered in the em box. [code: vertical-metrics-not-centered]</p>
-</span></li></ul></div></details>
+<span class='section__emoji'>⚠️⚠️⚠️⏩⏩⏩⏩⏩⏩ℹ️ℹ️</span>
 <h3>Font has **proper** whitespace glyph names?</h3>
 <div class='check__idlabel'>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/whitespace_glyphnames&gt;</div>
 
@@ -223,17 +226,6 @@ ul {
 - Glyph name: uogonek	Contours detected: 2	Expected: 1
 </code></pre>
 <p>[code: contour-count]</p>
-</span></li></ul></div></details>
-<h3>Ensure component transforms do not perform scaling or rotation.</h3>
-<div class='check__idlabel'>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/transformed_components&gt;</div>
-
-<details><summary>🔥 NotoSerifAhom-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The following glyphs had components with scaling or rotation
-or inverted outline direction:</p>
-<ul>
-<li>exclamdown (component exclam)</li>
-<li>questiondown (component question)
-[code: transformed-components]</li>
-</ul>
 </span></li></ul></div></details>
 <h3>Check math signs have the same width.</h3>
 <div class='check__idlabel'>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/math_signs_width&gt;</div>
@@ -289,7 +281,7 @@ minus
 </code></pre>
 </span></li></ul></div></details>
 <h2>Section: Shaping Checks</h2>
-<span class='section__emoji'>💥💥🔥⏩</span>
+<span class='section__emoji'>🔥⚠️⏩⏩</span>
 <h3>Check that texts shape as per expectation</h3>
 <div class='check__idlabel'>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/shaping/regression&gt;</div>
 
@@ -387,15 +379,13 @@ Expected: <svg class="shaping-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0
 </svg></p>
 </div> [code: shaping-regression]
 </span></li></ul></div></details>
-<h3>Check that no collisions are found while shaping</h3>
-<div class='check__idlabel'>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/shaping/collides&gt;</div>
-
-<details><summary>💥 NotoSerifAhom-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>💥 ERROR</span><span class='details_text'><p>Failed with ModuleNotFoundError: No module named 'collidoscope'</p>
-</span></li></ul></div></details>
 <h3>Ensure soft_dotted characters lose their dot when combined with marks that replace the dot.</h3>
 <div class='check__idlabel'>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/soft_dotted&gt;</div>
 
-<details><summary>💥 NotoSerifAhom-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>💥 ERROR</span><span class='details_text'><p>Failed with ModuleNotFoundError: No module named 'shaperglot'</p>
+<details><summary>⚠️ NotoSerifAhom-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The dot of soft dotted characters used in orthographies <em>must</em> disappear in the following strings: į̀ į́ į̂ į̃ į̄ į̌</p>
+<p>The dot of soft dotted characters <em>should</em> disappear in other cases, for example: į̆ į̇ į̈ į̊ į̋ į̒ į̦̀ į̦́ į̦̂ į̦̃ į̦̄ į̦̆ į̦̇ į̦̈ į̦̊ į̦̋ į̦̌ į̦̒ į̧̀ į̧́</p>
+<p>Your font fully covers the following languages that require the soft-dotted feature: Lithuanian (Latn, 2,357,094 speakers), Dutch (Latn, 31,709,104 speakers).</p>
+<p>Your font does <em>not</em> cover the following languages that require the soft-dotted feature: Navajo (Latn, 166,319 speakers), Ukrainian (Cyrl, 29,273,587 speakers), Aghem (Latn, 38,843 speakers), Igbo (Latn, 27,823,640 speakers), Basaa (Latn, 332,940 speakers), Belarusian (Cyrl, 10,064,517 speakers). [code: soft-dotted]</p>
 </span></li></ul></div></details>
                         </main>
                     </body>
