--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<div class="container-fluid">
 				<span class="navbar-text">
 					As at
-					<a href="https://github.com/notofonts/ahom/commit/f9f17b2
-"><code>f9f17b2
+					<a href="https://github.com/notofonts/ahom/commit/e39c09e
+"><code>e39c09e
 </code></a>
 				</span>
 				<div class="mx-auto order-0">
@@ -69,19 +69,19 @@
 				<h4>Noto Serif Ahom</h4>
 				<div class="row align-items-start"><ul>
 <li class="li-0">unhinted<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSerifAhom/unhinted/ttf/NotoSerifAhom-Regular.ttf"> NotoSerifAhom-Regular.ttf</a></li>
- </ul>
 <li class="li-1">otf<ul>
 <li><a href="fonts/NotoSerifAhom/unhinted/otf/NotoSerifAhom-Regular.otf"> NotoSerifAhom-Regular.otf</a></li>
  </ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSerifAhom/unhinted/ttf/NotoSerifAhom-Regular.ttf"> NotoSerifAhom-Regular.ttf</a></li>
+ </ul>
  </ul>
 <li class="li-0">full<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSerifAhom/full/ttf/NotoSerifAhom-Regular.ttf"> NotoSerifAhom-Regular.ttf</a></li>
- </ul>
 <li class="li-1">otf<ul>
 <li><a href="fonts/NotoSerifAhom/full/otf/NotoSerifAhom-Regular.otf"> NotoSerifAhom-Regular.otf</a></li>
+ </ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSerifAhom/full/ttf/NotoSerifAhom-Regular.ttf"> NotoSerifAhom-Regular.ttf</a></li>
  </ul>
  </ul>
 <li class="li-0">hinted<ul>
@@ -111,26 +111,34 @@
 
 				<ul>
 										<li>
-						<a href="fontbakery/googlefonts-NotoSerifAhom-report.html">FontBakery Report (Google Fonts)</a>
+						<a href="fontbakery/notofonts-NotoSerifAhom-googlefonts-report.html">FontBakery Report (Google Fonts)</a>
 					</li>
 									</ul>
 
 				<ul>
 									</ul>
-				
+
 				<h3>Proof sheets</h3>
 				<ul>
 					<li>
-						<a href="proof/glyphs.html">All glyphs</a>
+						Glyphs:
+							<a href="proof/NotoSerifAhom/Regular-diffbrowsers_glyphs.html">Regular</a> 
 					</li>
 					<li>
-						<a href="proof/text.html">Sample text</a>
+						Text:
+							<a href="proof/NotoSerifAhom/Regular-diffbrowsers_text.html">Regular</a> 
 					</li>
 					<li>
-						<a href="proof/waterfall.html">Waterfall test</a>
+						Waterfall:
+							<a href="proof/NotoSerifAhom/Regular-diffbrowsers_waterfall.html">Regular</a> 
+					</li>
+					<li>
+						Proofer:
+							<a href="proof/NotoSerifAhom/Regular-diffbrowsers_proofer.html">Regular</a> 
 					</li>
 				</ul>
-			</div>
+
+							</div>
 		</div>
 	</body>
 </html>
